crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__suffix-8.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "suffix.parse(\"_alpha1\").unwrap()"
---
kind: Alpha
version:
  raw: "1"
  value: 1
