crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__suffix.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "suffix.parse(\"_alpha\").unwrap()"
---
kind: Alpha
version: ~
