crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__version-2.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "version.parse(\"1a\").unwrap()"
---
op: ~
numbers:
  - raw: "1"
    value: 1
letter: a
suffixes: []
revision:
  raw: ""
  value: 0
