crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__version-8.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "version.parse(\"1-r18446744073709551615\").unwrap()"
---
op: ~
numbers:
  - raw: "1"
    value: 1
letter: ~
suffixes: []
revision:
  raw: "18446744073709551615"
  value: 18446744073709551615
