crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__version.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "version.parse(\"0\").unwrap()"
---
op: ~
numbers:
  - raw: "0"
    value: 0
letter: ~
suffixes: []
revision:
  raw: ""
  value: 0
