crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__version_with_op.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "version_with_op.parse(\"=0\").unwrap()"
---
op: Equal
numbers:
  - raw: "0"
    value: 0
letter: ~
suffixes: []
revision:
  raw: ""
  value: 0
